# chainize

./: .gitignore  .prettierrc.json  README.md  docker-compose.yml  dprint.json  example.env  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
.github/: CODEOWNERS
.github/workflows/: contracts-solana.yml  solana-workspace.yml  test-workspace.yml  test.yml  workspace.yml
apps/api/: .eslintrc.json  .swcrs  nodemon.json  package.json  tsconfig.json
apps/api/src/: main.ts  scrathpad.ts
apps/api/web/pages/: index.tsx
apps/web/: package.json  vercel.json
apps/web/components/: Footer.tsx  HeaderTabs.tsx
apps/web/pages/: index.tsx
contracts/: README.md
contracts/ERC20/: .eslintrc.json  hardhat.config.ts  package.json  tsconfig.json
contracts/EVM/: hardhat.config.ts  package.json
contracts/EVM/src/: index.ts  main.ts
contracts/EVM/src/contracts/: README.md
contracts/SPL/: Anchor.toml  package.json
contracts/SPL/programs/app/: Cargo.toml
contracts/SPL/programs/escrow-program/: Cargo.toml
contracts/SPL/programs/escrow-program/src/: lib.rs
contracts/SPL/scripts/: 00-wallet.mjs  airdrop.mjs  deploy.mjs  postinstall.mjs
contracts/SPL/tests/: app.ts  crowdfunding.test.ts  escrow.test.ts  puppet.test.ts  token.test.ts
contracts/erc-20/: package.json
contracts/erc-20/scripts/: thirdweb-deploy.js  thirdweb.js
contracts/solana-escrow/: Anchor.toml  package.json
contracts/solana-escrow/tests/: escrow.test.ts
docs/: recommended-infrastructure.md
(+14 files in other folders)
